<resources>
    <string name="app_name">Projeto Final</string>
    <string name="nomeAplicacao">Gestão de frotas</string>
    <string name="titulo_activity_login">Autenticação</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">Loading...</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sair</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="gravarDados">Gravar Dados</string>
    <string name="title_activity_maps">Map</string>
    <string name="mensagem_dialog">Escreva a matrícula do veículo</string>
    <string name="titulo_dialog">Matrícula</string>
    <string name="qual_carro">Matrícula do veículo:</string>
    <string name="encomenda">Descrição da encomenda:</string>
    <string name="matricula">AA-00-AA</string>
    <string name="bemvindo">Bem vindo(a)</string>
    <string name="descricao">Descrição</string>
    <string name="codigo">Código da Encomenda:</string>
    <string name="cod">Código</string>
    <string name="add_encomenda">Adicionar Encomenda</string>
    <string name="iniciar_viagem">Iniciar Viagem</string>
    <string name="registo_fragment">RegistoFragment</string>
    <string name="localizacao">Localização Atual:</string>
    <string name="nomeMatricula">Matricula:</string>
    <string name="nomeCodigoMatricula">Codigo:</string>
    <string name="button_comecar_viagem">Iniciar viagem</string>
    <string name="button_acabar_viagem">Acabar viagem</string>
    <string name="nomeVelocidade">Velocidade atual:</string>
    <string name="kmh">km/h</string>
    <string name="adicionarEncomenda">Adicionar Encomenda</string>
    <string name="entregarEncomenda">Entregar Encomenda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
