<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_activity_login"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/prompt_email"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="textEmailAddress"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/prompt_password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:inputType="textPassword"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlogin"
        android:text="@string/action_login_short"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignin"
        android:text="@string/action_sign_in_short"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

</LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
</ScrollView>